addDBConnect+Authorization