@@ -1,32 +1,21 @@
-    plugins {
-    id("org.springframework.boot") version "2.7.0"
-    id("io.spring.dependency-management") version "1.0.11.RELEASE"
+plugins {
     java
+    id("org.springframework.boot") version "3.2.4"
+    id("io.spring.dependency-management") version "1.1.5"
 }
 
-group = "org.example"
-version = "1.0-SNAPSHOT"
-java.sourceCompatibility = JavaVersion.VERSION_18
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    // Версии не указываем — плагин сам подставит нужные
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-validation")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-}
-
-tasks.withType<Test> {
-    useJUnitPlatform()
-}
-
-tasks.withType<JavaCompile> {
-    options.encoding = "UTF-8"
-    options.compilerArgs.add("-parameters")
-}
-
-tasks.withType<JavaExec> {
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
+    runtimeOnly("org.postgresql:postgresql")
 }
